The era of the Common JS/AMD loaders has ended.
For now. Everything is plain o'l jQuery. The result seems to
be cleaner, and more understandable, and for now - even less verbose.
Yagni told me not to worry about the future.

--- a/src/main/webapp/static/template/index.mustache
+++ b/src/main/webapp/static/template/index.mustache
@@ -1,1 +1,7 @@
-<div>Start the <a id="ride" href="#">ride</a>!</div>
+<div id="register">
+<a class="trigger" href="#">Register</a>
+</div>
+
+<div id="users">
+<div>Meet your <a class="trigger" href="#">Motley Crew</a>!</div>
+</div>
