Enhance UI to toggle content instead of appending on trigger clicks.

--- a/src/main/webapp/static/template/index.mustache
+++ b/src/main/webapp/static/template/index.mustache
@@ -3,5 +3,5 @@
 </div>
 
 <div id="users">
-<div>Meet your <a class="trigger" href="#">Motley Crew</a>!</div>
+Meet your <a class="trigger" href="#">Motley Crew</a>!
 </div>
