Add initial Authentication screen

--- a/src/main/webapp/static/template/login.mustache
+++ b/src/main/webapp/static/template/login.mustache
@@ -1,13 +1,13 @@
 <form>
     <fieldset>
-        <label>Email:
-            <input type="text" name="email" />
+        <label>Email or Username:
+            <input type="text" name="email_or_username" />
         </label>
         <br />
         <label>Password:
             <input type="password" name="password" />
         </label>
         <br />
-        <input type="submit" value="Register" />
+        <input type="submit" value="Login" />
     </fieldset>
 </form>
