--- a/src/main/webapp/static/template/authenticate.mustache
+++ b/src/main/webapp/static/template/authenticate.mustache
@@ -1,12 +1,16 @@
 <div id="welcome-banner">
-Welcome aboard Jack Sparrow, pirate!
+    <big>Jack Sparrow</big>
+    <br />
+    <em>Mutiny My Friend</em>
+    <br />
+    <br />
 </div>
 
 <div id="login">
     <div>or <a class="trigger" href="#">Sign Up Now!</a></div>
 </div>
 
-<div id="register" class="hidden">
+<div id="register">
     <div>Already a user? Then just <a class="trigger" href="#">Login</a></div>
 </div>
 
