Registration Client UI widgets complete.

--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -5,3 +5,15 @@ body {
 .hidden {
     display: none;
 }
+
+label .info {
+    text-style: italics;
+}
+
+input.unvalidated {
+    background-color: #FAAAAA;
+}
+
+input.validated {
+    background-color: #adffbb;
+}
