--- a/src/main/webapp/static/template/register.mustache
+++ b/src/main/webapp/static/template/register.mustache
@@ -4,6 +4,10 @@
             <input type="text" name="email" />
         </label>
         <br />
+        <label>Username:
+            <input type="text" name="username" />
+        </label>
+        <br />
         <label>Password:
             <input type="password" name="password" />
         </label>
