--- a/src/main/webapp/WEB-INF/views/base.mustache
+++ b/src/main/webapp/WEB-INF/views/base.mustache
@@ -9,6 +9,7 @@
     <script defer src="/static/js/lib/jquery-1.7.2.js"></script>
     <script defer src="/static/js/lib/mustache.js"></script>
     <script defer src="/static/js/fetch.js"></script>
+    <script defer src="/static/js/common.js"></script>
     <script defer src="/static/js/{{loader}}.js"></script>
     <noscript>
         <meta http-equiv="Refresh" content="1;url=XXX" />
