--- a/src/main/webapp/static/template/user.mustache
+++ b/src/main/webapp/static/template/user.mustache
@@ -1,6 +1,19 @@
 
+<html><head><title>Scrollable table cell</title></head>
 
 
-    Welcome, user
-<div>
-</div>
+<body>
+
+<table align="center" border="1"  cellpadding="0" cellspacing="0">
+<tbody>
+	<tr>
+		<td style="width: 400px; height: 100px;">&nbsp;</td>
+	</tr>
+	<tr>
+		<td style="width: 400px; height: 500px;">
+			<div id = "post_container" style="width: 100%; height: 100%; overflow: auto;">
+         	</div>
+		</td></tr></tbody></table>
+
+</body>
+</html>
