Logout JS complete

--- a/src/main/webapp/static/template/index.mustache
+++ b/src/main/webapp/static/template/index.mustache
@@ -1,7 +1,7 @@
 <div id="info" />
 
-<div id="register">
-<a class="trigger" href="#">Register</a>
+<div id="logout">
+<a class="trigger" href="#">Logout</a>
 </div>
 
 <div id="users">
