Self information (me) API

--- a/api-server-spring/src/main/webapp/static/template/index.mustache
+++ b/api-server-spring/src/main/webapp/static/template/index.mustache
@@ -1,9 +1,12 @@
-<div id="info" />
+<div id="dashboard">
 
-<div id="logout">
-<a class="trigger" href="#">Logout</a>
+  <span id="display-name" />
+  [
+  <span id="logout">
+    <a class="trigger" href="#">Logout</a>
+  </span>
+  ]
+
 </div>
 
-<div id="users">
-Meet your <a class="trigger" href="#">Motley Crew</a>!
-</div>
+<div id="content" />
