--- a/api-server-spring/src/main/webapp/static/template/index.mustache
+++ b/api-server-spring/src/main/webapp/static/template/index.mustache
@@ -1,6 +1,6 @@
 <div id="dashboard">
 
-  <span id="display-name" />
+  {{#user}}{{username}}{{/user}}
   [
   <span id="logout">
     <a class="trigger" href="#">Logout</a>
