Add images for detail expansion
Taken from google's homepage, for demo purposes only

--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -25,3 +25,10 @@ input.validated {
     font-style: italic;
     font-size: 80%;
 }
+
+.post.current {
+    background-color: yellow;
+}
+
+.post.current img {
+}
