--- a/api-server-spring/src/main/webapp/static/template/feed.mustache
+++ b/api-server-spring/src/main/webapp/static/template/feed.mustache
@@ -5,5 +5,8 @@
     <span class="author" data-id="{{#user}}{{id}}{{/user}}" /> 
     (<span class="timestamp" data-staleness="{{staleness}}" />)
   </div>
+  <div class="detail">
+    <a href="{{id}}" />
+  </div>
 </div>
 {{/feed}}
