--- a/api-server-spring/src/main/webapp/static/template/index.mustache
+++ b/api-server-spring/src/main/webapp/static/template/index.mustache
@@ -9,4 +9,13 @@
 
 </div>
 
-<div id="content" />
+<div id="root-pane">
+  foo foo foo foo foo foo foo foo
+</div>
+
+<div id="content-pane">
+  <div id="content" />
+    <div id="detail">
+      &nbsp;
+    </div>
+</div>
