--- a/api-server-spring/src/main/webapp/static/template/index.mustache
+++ b/api-server-spring/src/main/webapp/static/template/index.mustache
@@ -1,21 +1,8 @@
-<div id="dashboard">
+<div id="dashboard" />
 
-  {{#user}}{{username}}{{/user}}
-  [
-  <span id="logout">
-    <a class="trigger" href="#">Logout</a>
-  </span>
-  ]
-
-</div>
-
-<div id="root-pane">
-  foo foo foo foo foo foo foo foo
-</div>
+<div id="root-pane" />
 
 <div id="content-pane">
   <div id="content" />
-    <div id="detail">
-      &nbsp;
-    </div>
+  <div id="detail" />
 </div>
