--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -44,6 +44,7 @@ body {
     background-color: grey;
     float: left;
     width: 55%;
+    min-height: 200px;
 }
 
 #detail {
@@ -66,6 +67,29 @@ body {
     float: right;
 }
 
+/*
+ *
+ */
+.trigger.current {
+    display: none;
+}
+
+/*XXX*/
+.centered {
+    display: block;
+    margin: auto;
+}
+
+#loader-tab-parent {
+    position: relative;
+}
+#loader-tab {
+    background:url("/static/img/ajax-loader.gif") no-repeat center center;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
 
 /*
  * Misc
