Change style of current tab trigger instead of hiding it.

--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -71,7 +71,10 @@ body {
  *
  */
 .trigger.current {
-    display: none;
+    color: black;
+    /* XXX doesn't work in IE? */
+    pointer-events: none;
+    cursor: default;
 }
 
 /*XXX*/
