Remaining character counter in create post

--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -94,7 +94,28 @@ body {
     right: 0;
 }
 
+
 /*
+ *
+ * Create post
+ *
+ */
+
+
+#create .info {
+    font-style: italic;
+}
+
+#create .info.validated {
+    color: #adffbb;
+}
+
+#create .info.unvalidated {
+    color: #FAAAAA;
+}
+
+/*
+ *
  * Misc
  *
  */
