--- a/api-server-spring/src/main/webapp/static/template/create.mustache
+++ b/api-server-spring/src/main/webapp/static/template/create.mustache
@@ -1,10 +1,8 @@
-<h1>Create Post</h1>
-
 <form>
   <fieldset>
-        <textarea name="content">
-        </textarea>
+        <textarea name="content" rows="6" cols="27"></textarea>
         <br />
         <input type="submit" value="Post" />
+        <span class="info" />
   </fieldset>
 </form>
