--- a/api-server-spring/src/main/webapp/static/template/feed.mustache
+++ b/api-server-spring/src/main/webapp/static/template/feed.mustache
@@ -8,7 +8,7 @@
   <div class="content">{{content}}</div>
   <div class="info">
     <span class="author" data-id="{{#user}}{{id}}{{/user}}" /> 
-    (<span class="timestamp" data-staleness="{{staleness}}" />)
+    (<span class="timestamp" />)
   </div>
 </div>
 {{/feed}}
