Reflect userDetail API changes in JS.

--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -3,6 +3,6 @@
 </div>
 
 <div class="controls">
-  {{#user}}{{username}}{{/user}}
+  {{name}}
   [<a id="logout-trigger" href="#">Logout</a>]
 </div>
