--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -1,8 +1,11 @@
 <div class="branding">
-  Jack Sparrow
+  <a href="/" alt="Go Home">Jack Sparrow</a>
 </div>
 
 <div class="controls">
-  {{name}}
+  <a href="#" id="create-trigger" class="trigger">Create Post</a>
+  <img class=profile" width="32" height="32" src="/static/img/anon.png" 
+    alt="{{displayName}}" title="{{displayName}}" />
+  {{displayName}}
   [<a id="logout-trigger" href="#">Logout</a>]
 </div>
