JS Cleanup, and attach Warnings to all $.fetch failures.

--- a/api-server-spring/src/main/webapp/static/template/create.mustache
+++ b/api-server-spring/src/main/webapp/static/template/create.mustache
@@ -1,8 +1,10 @@
-<form>
-  <fieldset>
-        <textarea name="content" rows="6" cols="27"></textarea>
-        <br />
-        <input type="submit" value="Post" />
-        <span class="info" />
-  </fieldset>
-</form>
+<div id="create">
+  <form>
+    <fieldset>
+      <textarea name="content" rows="6" cols="27"></textarea>
+      <br />
+      <input type="submit" value="Post" />
+      <span class="info" />
+    </fieldset>
+  </form>
+</div>
