--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -106,6 +106,14 @@ body {
  *
  */
 
+#create {
+    postion: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: green;
+}
 
 #create .info {
     font-style: italic;
