Create Form Complete.

--- a/api-server-spring/src/main/webapp/static/template/root-pane.mustache
+++ b/api-server-spring/src/main/webapp/static/template/root-pane.mustache
@@ -11,8 +11,8 @@
   XXX Stats
 </div>
 
-<div>
-  <a href="#" id="posts-trigger" class="trigger">Posts</a>
-  <a href="#" id="followers-trigger" class="trigger">Followers</a>
-  <a href="#" id="following-trigger" class="trigger">Following</a>
-</div>
+<ul>
+  <li><a href="#" id="posts-trigger" class="trigger">Posts</a></li>
+  <li><a href="#" id="followers-trigger" class="trigger">Followers</a></li>
+  <li><a href="#" id="following-trigger" class="trigger">Following</a></li>
+</ul>
