--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -14,16 +14,32 @@ body {
     border: 0;
 }
 
+textarea,input,select {
+    font: inherit;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+fieldset {
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
 #dashboard {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 2em;
+    height: 2em; /* affects create */
     color: white;
     z-index: 1;
-    min-height: 32px;
+    min-height: 32px; /* XXX vert align pic */
     /*border-bottom: 1px solid white;*/
 }
 
@@ -107,15 +123,27 @@ body {
  */
 
 #create {
-    postion: relative;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
     left: 0;
-    top: 0;
+    top: 2em;
     width: 100%;
     height: 100%;
-    background-color: green;
+}
+
+#create .content {
+    float: right;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 36ex; 
+    height: 100%;
+    padding: 3ex;
+    margin: auto;
+    text-align: right;
 }
 
 #create .info {
+    min-height: 1.5em;
     font-style: italic;
 }
 
