--- a/api-server-spring/src/main/webapp/static/template/create.mustache
+++ b/api-server-spring/src/main/webapp/static/template/create.mustache
@@ -5,12 +5,8 @@
         <textarea name="content" rows="6" cols="27"></textarea>
       </fieldset>
         <div class="info" />
-        <a href="#" id="create-submit-trigger"><img 
-          src="/static/img/check32.png" width="32" height="32"
-          alt="Post" title="Post" /></a>
-        <a href="#" id="create-cancel-trigger"><img 
-          src="/static/img/stop32.png" width="32" height="32"
-          alt="Cancel" title="Cancel" /></a>
+        <a href="#" id="create-submit-trigger" class="trigger" title="Post">
+        <a href="#" id="create-cancel-trigger" class="trigger" title="Cancel" />
       </form>
   </div>
 </div>
