--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -3,7 +3,7 @@
 </div>
 
 <div class="controls">
-  <a href="#" id="create-trigger" class="trigger">Create Post</a>
+  <a href="#" id="create-trigger" class="trigger" title="Create Post" />
   <img class=profile" width="32" height="32" src="/static/img/anon.png" 
     alt="{{displayName}}" title="{{displayName}}" />
   {{displayName}}
