Feed Update slides Down now.

--- a/api-server-spring/src/main/webapp/static/template/root-pane.mustache
+++ b/api-server-spring/src/main/webapp/static/template/root-pane.mustache
@@ -3,7 +3,7 @@
 <div>
   {{displayName}}
   <br />
-  <img class=profile" width="128" height="128" src="/static/img/anon.png" 
+  <img class="profile" width="128" height="128" src="/static/img/anon.png" 
     alt="{{displayName}}" title="{{displayName}}" />
 </div>
 
