--- a/api-server-spring/src/main/webapp/static/template/feed.mustache
+++ b/api-server-spring/src/main/webapp/static/template/feed.mustache
@@ -2,7 +2,7 @@
 <div class="post" data-id="{{id}}">
   <div class="content">{{content}}</div>
   <div class="info">
-    <span class="author" data-id="{{#user}}{{id}}{{/user}}" /> 
+    <span class="user" data-id="{{#user}}{{id}}{{/user}}" /> 
     (<span class="timestamp" />)
   </div>
 </div>
