Datacache acts as primary source, contains formatted entities.

--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -5,7 +5,7 @@
 <div class="controls">
   <a href="#" id="create-trigger" class="trigger" title="Create Post" />
   <img class="profile" width="32" height="32" src="/static/img/anon.png" 
-    alt="{{displayName}}" title="{{displayName}}" />
+    alt="{{name}}" title="{{name}}" />
   {{displayName}}
   [<a id="logout-trigger" href="#">Logout</a>]
 </div>
