--- a/api-server-spring/src/main/webapp/static/css/common.css
+++ b/api-server-spring/src/main/webapp/static/css/common.css
@@ -111,6 +111,9 @@ fieldset {
 #create-cancel-trigger { background-image: url("/static/img/stop.png"); }
 #create-trigger { background-image: url("/static/img/notepencil.png"); }
 #zoom-trigger { background-image: url("/static/img/slide.png"); }
+#follow-trigger { background-image: url("/static/img/exchange.png"); }
+#unfollow-trigger { background-image: url("/static/img/block.png"); }
+
 #close-detail-trigger { 
     background-image: url("/static/img/cross.png"); 
     float: right;
