--- a/api-server-spring/src/main/webapp/static/template/postDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/postDetails.mustache
@@ -1,7 +1,15 @@
 <a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
 <div class="postDetail">
-  <ul>
-    <li>Created on {{created_on}}</li>
-  </ul>
+  Created on {{created_on_readable}} by
+</div>
+<div class="userDetail">
+  <div class="userDetail-Name">{{name}}</div>
+  <a href="{{#user}}{{permalink}}{{/user}}">Go to 
+    the full profile of {{#user}}{{username}}{{/user}}</a>
+  <div class="info">
+    (<span class="timestamp" />Online Now?!)
+  </div>
   <a href="{{permalink}}" id="zoom-trigger" class="trigger" title="Zoom" />
+  <a href="#" id="follow-trigger" class="trigger" title="Follow" />
+  <a href="#" id="unfollow-trigger" class="trigger" title="Unfollow" />
 </div>
