--- a/api-server-spring/src/main/webapp/static/template/rootPane.mustache
+++ b/api-server-spring/src/main/webapp/static/template/rootPane.mustache
@@ -1,10 +1,10 @@
 <a href="#" id="feed-trigger" class="trigger">Feed</a>
 
 <div>
-  {{displayName}}
+  {{name}}
   <br />
   <img class="profile" width="128" height="128" src="/static/img/anon.png" 
-    alt="{{displayName}}" title="{{displayName}}" />
+    alt="{{name}}" title="{{name}}" />
 </div>
 
 <div>
