WIP Details tab.

--- a/api-server-spring/src/main/webapp/static/template/postDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/postDetails.mustache
@@ -3,7 +3,7 @@
   Created on {{created_on_readable}} by
 </div>
 <div class="userDetail">
-  <div class="userDetail-Name">{{name}}</div>
+  <div class="userDetail-Name">{{#user}}{{name}}{{/user}}</div>
   <a href="{{#user}}{{permalink}}{{/user}}">Go to 
     the full profile of {{#user}}{{username}}{{/user}}</a>
   <div class="info">
