--- a/api-server-spring/src/main/webapp/static/template/create.mustache
+++ b/api-server-spring/src/main/webapp/static/template/create.mustache
@@ -1,5 +1,6 @@
 <div id="create">
   <div class="content">
+    <h2>Compose New Post</h2>
     <form>
       <fieldset>
         <textarea name="content" rows="6" cols="27"></textarea>
