--- a/api-server-spring/src/main/webapp/static/template/feed.mustache
+++ b/api-server-spring/src/main/webapp/static/template/feed.mustache
@@ -1,5 +1,5 @@
 {{#feed}}
-<div class="post" data-id="{{id}}">
+<div class="entity" data-id="{{id}}">
   <div class="content">{{content}}</div>
   <div class="info">
     <span class="user">{{#user}}{{name}}{{/user}}</span>
