--- a/api-server-spring/src/main/webapp/static/template/followers.mustache
+++ b/api-server-spring/src/main/webapp/static/template/followers.mustache
@@ -1,8 +1,5 @@
 {{#followers}}
-<div class="user" data-id="{{id}}">
-  <div class="content">{{id}}</div>
-  <div class="info">
-    (<span class="timestamp" />lastSeen)
-  </div>
+<div class="entity" data-id="{{id}}">
+  {{name}}
 </div>
 {{/followers}}
