--- a/api-server-spring/src/main/webapp/static/template/posts.mustache
+++ b/api-server-spring/src/main/webapp/static/template/posts.mustache
@@ -1,5 +1,5 @@
 {{#posts}}
-<div class="post" data-id="{{id}}">
+<div class="entity" data-id="{{id}}">
   <div class="content">{{content}}</div>
   <div class="info">
     (<span class="timestamp" />)
