--- a/api-server-spring/src/main/webapp/static/template/rootPane.mustache
+++ b/api-server-spring/src/main/webapp/static/template/rootPane.mustache
@@ -1,4 +1,3 @@
-<a href="#" id="feed-trigger" class="trigger">Feed</a>
 
 <div>
   {{name}}
@@ -16,6 +15,7 @@
 </div>
 
 <ul>
+  <li><a href="#" id="feed-trigger" class="trigger">Feed</a></li>
   <li><a href="#" id="posts-trigger" class="trigger">Posts</a></li>
   <li><a href="#" id="followers-trigger" class="trigger">Followers</a></li>
   <li><a href="#" id="following-trigger" class="trigger">Following</a></li>
