--- a/api-server-spring/src/main/webapp/static/template/userDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/userDetails.mustache
@@ -1,11 +1,14 @@
 <a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
 <div class="userDetail">
   <div class="userDetail-Name">{{name}}</div>
-  <a href="{{permalink}}">Go to 
-    the full profile of {{#user}}{{username}}{{/user}}</a>
-  <div class="info">
-    (<span class="timestamp" />Online Now?!)
-  </div>
-  <a href="#" id="follow-trigger" class="trigger" title="Follow" />
-  <a href="#" id="unfollow-trigger" class="trigger" title="Unfollow" />
+  <a href="{{#user}}{{permalink}}{{/user}}">Go to 
+    the full profile of {{username}}</a>
+  {{#doesNotFollow}}
+    <a href="#" id="follow-trigger" class="trigger" title="Follow" 
+      data-id="{{id}}" />
+  {{/doesNotFollow}}
+  {{#doesFollow}}
+    <a href="#" id="unfollow-trigger" class="trigger" title="Unfollow"
+      data-id="{{id}}" />
+  {{/doesFollow}}
 </div>
