--- a/api-server-spring/src/main/webapp/static/template/post.mustache
+++ b/api-server-spring/src/main/webapp/static/template/post.mustache
@@ -2,6 +2,6 @@
 
 <div id="full-content-pane">
   <h1>{{content}}</h1>
-  Posted on {{created_on}} by 
-  <a href="/{{#user}}{{username}}{{/user}}">{{#user}}{{username}}{{/user}}</a>
+  Posted on {{created_on_readable}} by 
+  <a href="{{#user}}{{permalink}}{{/user}}">{{#user}}{{username}}{{/user}}</a>
 </div>
