User page finish.

--- a/api-server-spring/src/main/webapp/static/template/userDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/userDetails.mustache
@@ -1,7 +1,7 @@
 <a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
 <div class="userDetail">
   <div class="userDetail-Name">{{name}}</div>
-  <a href="{{#user}}{{permalink}}{{/user}}">Go to 
+  <a href="{{permalink}}">Go to 
     the full profile of {{username}}</a>
   {{#doesNotFollow}}
     <a href="#" id="follow-trigger" class="trigger" title="Follow" 
