--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -4,8 +4,8 @@
 
 <div class="controls">
   <a href="#" id="create-trigger" class="trigger" title="Create Post" />
-  <img class="profile" width="32" height="32" src="/static/img/anon.png" 
-    alt="{{name}}" title="{{name}}" />
+    <img class="profile invisible" width="32" height="32" 
+      alt="{{name}}" title="{{name}}" data-id="{{id}}" />
   {{displayName}}
   [<a id="logout-trigger" href="#">Logout</a>]
 </div>
