--- a/api-server-spring/src/main/webapp/static/template/followers.mustache
+++ b/api-server-spring/src/main/webapp/static/template/followers.mustache
@@ -1,5 +1,7 @@
 {{#followers}}
 <div class="entity" data-id="{{id}}">
-  {{name}}
+  <img class="profile invisible" width="48" height="48" 
+    data-id="{{id}}" alt="{{name}}" title="{{name}}" />
+  <span class="user-name">{{name}}</span>
 </div>
 {{/followers}}
