--- a/api-server-spring/src/main/webapp/static/template/posts.mustache
+++ b/api-server-spring/src/main/webapp/static/template/posts.mustache
@@ -1,8 +1,6 @@
 {{#posts}}
 <div class="entity" data-id="{{id}}">
-  <div class="content">{{content}}</div>
-  <div class="info">
-    (<span class="timestamp" />)
-  </div>
+  <span class="content">{{content}}</span>
+  <div class="timestamp" />
 </div>
 {{/posts}}
