--- a/api-server-spring/src/main/webapp/static/template/rootPaneUser.mustache
+++ b/api-server-spring/src/main/webapp/static/template/rootPaneUser.mustache
@@ -2,8 +2,8 @@
 <div>
   {{name}}
   <br />
-  <img class="profile" width="128" height="128" src="/static/img/anon.png" 
-    alt="{{name}}" title="{{name}}" />
+  <img class="profile invisible" width="128" height="128" 
+    data-id="{{id}}" alt="{{name}}" title="{{name}}" />
 </div>
 
 <div>
