--- a/api-server-spring/src/main/webapp/static/template/create.mustache
+++ b/api-server-spring/src/main/webapp/static/template/create.mustache
@@ -6,8 +6,8 @@
         <textarea name="content" rows="6" cols="27"></textarea>
       </fieldset>
         <div class="info" />
-        <a href="#" id="create-submit-trigger" class="trigger" title="Post">
-        <a href="#" id="create-cancel-trigger" class="trigger" title="Cancel" />
+        <a href="#" id="create-submit-trigger" class="trigger trigger-icon" title="Post">
+        <a href="#" id="create-cancel-trigger" class="trigger trigger-icon" title="Cancel" />
       </form>
   </div>
 </div>
