--- a/api-server-spring/src/main/webapp/static/template/dashboard.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboard.mustache
@@ -3,9 +3,9 @@
 </div>
 
 <div class="controls">
-  <a href="#" id="create-trigger" class="trigger" title="Create Post" />
-    <img class="profile invisible" width="32" height="32" 
-      alt="{{name}}" title="{{name}}" data-id="{{id}}" />
-  {{displayName}}
+  <span class="username">@{{username}}</span>
+  <a href="#" id="create-trigger" class="trigger trigger-icon" title="Create Post" />
+  <img class="profile invisible" width="32" height="32" 
+    alt="{{name}}" title="{{name}}" data-id="{{id}}" />
   [<a id="logout-trigger" href="#">Logout</a>]
 </div>
