--- a/api-server-spring/src/main/webapp/static/template/userDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/userDetails.mustache
@@ -1,13 +1,14 @@
 <a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
 <div class="userDetail">
   <a href="{{permalink}}">Go to 
-    the full profile of {{username}}</a>
+    the full profile of 
+    <span class="username">@{{username}}</span></a>
   {{#doesNotFollow}}
-    <a href="#" id="follow-trigger" class="trigger" title="Follow" 
+    <a href="#" id="follow-trigger" class="trigger trigger-icon" title="Follow" 
       data-id="{{id}}" />
   {{/doesNotFollow}}
   {{#doesFollow}}
-    <a href="#" id="unfollow-trigger" class="trigger" title="Unfollow"
+    <a href="#" id="unfollow-trigger" class="trigger trigger-icon" title="Unfollow"
       data-id="{{id}}" />
   {{/doesFollow}}
 </div>
