--- a/api-server-spring/src/main/webapp/static/template/authenticate.mustache
+++ b/api-server-spring/src/main/webapp/static/template/authenticate.mustache
@@ -1,9 +1,4 @@
-<div id="login">
-    <div>or <a class="trigger" href="#">Sign Up Now!</a></div>
+<div class="content">
+  <div id="login" />
+  <div id="register" />
 </div>
-
-<div id="register">
-    <div>Already a user? Then just <a class="trigger" href="#">Login</a></div>
-</div>
-
-
