--- a/api-server-spring/src/main/webapp/static/template/dashboardVanilla.mustache
+++ b/api-server-spring/src/main/webapp/static/template/dashboardVanilla.mustache
@@ -3,5 +3,6 @@
 </div>
 
 <div class="controls">
-  <a href="/" alt="Sign Up Now">Login/Register XXX</a>
+  <a href="#" id="authenticate-trigger" class="trigger" 
+    alt="Sign Up Now">Login/Register</a>
 </div>
