--- a/api-server-spring/src/main/webapp/static/template/login.mustache
+++ b/api-server-spring/src/main/webapp/static/template/login.mustache
@@ -10,4 +10,5 @@
         <br />
         <input type="submit" value="Login" />
     </fieldset>
+    <div>or <a class="trigger" href="#">Sign Up Now!</a></div>
 </form>
