--- a/api-server-spring/src/main/webapp/static/template/postDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/postDetails.mustache
@@ -1,4 +1,4 @@
-<a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
+<a href="#" id="close-detail-trigger" class="trigger trigger-icon" title="Hide" />
   <div>
   Created on {{created_on_readable}} by {{#user}}{{name}}{{/user}}
   </div>
