--- a/api-server-spring/src/main/webapp/static/template/register.mustache
+++ b/api-server-spring/src/main/webapp/static/template/register.mustache
@@ -14,4 +14,5 @@
         <br />
         <input type="submit" value="Register" />
     </fieldset>
+    <div>Already a user? Then just <a class="trigger" href="#">Login</a></div>
 </form>
