--- a/api-server-spring/src/main/webapp/WEB-INF/views/base.mustache
+++ b/api-server-spring/src/main/webapp/WEB-INF/views/base.mustache
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>{{title}}</title>
+    <title>Jack Sparrow</title>
 
     <link rel="stylesheet" href="/static/css/common.css" />
 
