--- a/api-server-spring/src/main/webapp/static/template/userDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/userDetails.mustache
@@ -1,4 +1,4 @@
-<a href="#" id="close-detail-trigger" class="trigger" title="Hide" />
+<a href="#" id="close-detail-trigger" class="trigger trigger-icon" title="Hide" />
 <div class="userDetail">
   <a href="{{permalink}}">Go to 
     the full profile of 
